--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "main": "index.js",
   "repository": "https://github.com/jnowell41/news-style-website.git",
   "author": "James Nowell",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.10",
+    "sass": "^1.17.3",
+    "typescript": "^3.4.1"
+  }
 }
